<resources>
    <string name="app_name">NBA Scheduler</string>
    <string name="games">Daily Games</string>
    <string name="team_games">Team Schedule</string>
    <string name="Name">Username: </string>
    <string name="favourite">Favourite Team: </string>
    <string name="apply">Apply</string>
    <string name="remindersbtn">My Reminders</string>

    <string-array name="teams_array">
        <item>Bucks</item>
        <item>Bulls</item>
        <item>Cavaliers</item>
        <item>Celtics</item>
        <item>Clippers</item>
        <item>Grizzlies</item>
        <item>Hawks</item>
        <item>Heat</item>
        <item>Hornets</item>
        <item>Jazz</item>
        <item>Kings</item>
        <item>Knicks</item>
        <item>Lakers</item>
        <item>Magic</item>
        <item>Mavericks</item>
        <item>Nets</item>
        <item>Nuggets</item>
        <item>Pacers</item>
        <item>Pelicans</item>
        <item>Pistons</item>
        <item>Raptors</item>
        <item>Rockets</item>
        <item>76ers</item>
        <item>Spurs</item>
        <item>Suns</item>
        <item>Thunder</item>
        <item>Timberwolves</item>
        <item>Trail Blazers</item>
        <item>Warriors</item>
        <item>Wizards</item>
    </string-array>
</resources>
