<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserSettings"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Name"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="10dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:id="@+id/name_box" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/favourite"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="10dp"
        />

    <androidx.appcompat.widget.AppCompatSpinner
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginLeft="10dp"
        android:id="@+id/teams_spinner"
        ></androidx.appcompat.widget.AppCompatSpinner>

    <Button
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="200dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/apply"
        android:id="@+id/applybtn"/>

</LinearLayout>