<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_gravity=""
        android:src="@drawable/logo" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#006BB7"
        android:text="@string/games"
        android:textColor="#FFFFFF"
        android:id="@+id/daily"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_games"
        android:background="#006BB7"
        android:textColor="#FFFFFF"
        android:layout_margin="10dp"
        android:id="@+id/team_schedule"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#006BB7"
        android:text="News"
        android:textColor="#FFFFFF"
        android:id="@+id/news"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#006BB7"
        android:text="@string/remindersbtn"
        android:textColor="#FFFFFF"
        android:id="@+id/remindersbtn"
        />

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_settings_black_24dp"
        android:layout_gravity="end"
        android:layout_marginTop="20dp"
        android:id="@+id/settings"
        />


</LinearLayout>